2006-07-14  Mike Kestner  <mkestner@novell.com>

	* sources/gtk-sharp-2.10-sources.xml : update to gtk+-2.10.0 
	and pango-1.13.3
	* sources/Makefile.am : ditto.
	* gtk/Gtk.metadata : some hides and renames to fix build.
	* gdk/gdk-api-2.10.raw : refresh.
	* gtk/gtk-api-2.10.raw : refresh.
	* pango/pango-api-2.10.raw : refresh.

2006-07-14  Mike Kestner  <mkestner@novell.com>

	* sample/gnomevfs/Makefile.am : build fix for !ENABLE_GNOMEVFS.

2006-06-21 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* glade/HandlerNotFoundExeception.cs:
	* glade/XML.custom: provide a better error when the signature of a
	handler does not match the one of the event.

2006-05-10  Mike Kestner  <mkestner@novell.com>

	* bootstrap-2.10 : strap for the new 2.9.0 API.
	* generator/SymbolTable.cs : add GLib.InitiallyUnowned mapping.
	* glib/InitiallyUnowned.cs : new floating class "stub".
	* glib/Makefile.am : build new class.
	* gdk/gdk-api-2.10.raw: parse from 2.9.0
	* gtk/Gtk.metadata: cleanup conflicts in 2.10 API.
	* gtk/gtk-api-2.10.raw: parse from 2.9.0
	* pango/pango-api-2.10.raw: parse from 1.11.99
	* sources/Makefile.am : 2.10 parse setup and api-2.10 
	* sources/gtk_tree_model_signal_fix-2.10.patch : 2.10 patch.
	* sources/gtk-sharp-2.10-sources.xml : parse rules for 2.10

2006-05-08  Joe Shaw  <joeshaw@novell.com>

	* glib/ValueArray.cs: Don't immediately free ValueArrays; queue
	them up to be freed in the main thread by using a Timeout.  This
	fixes SMP deadlocks when the GValues contained therein aren't
	threadsafe (like GDK resources).  Fixes Novell bug #168650.

2006-05-04  Peter Johanson  <peter@peterjohanson.com>

	* gtk/glue/cellrenderer.c: Revert r59683, as it causes issues for
	overrides calling base.GetSize (), etc.

2006-05-03  Mike Kestner  <mkestner@novell.com>

	* gdk/Drawable.custom : remove manual DrawPoints impl.
	* gdk/Gdk.metadata : properly mark array and count params for
	Drawable.DrawPoints.

2006-05-02  Zac Bowling  <zac@zacbowling.com>
