@@ -145,7 +145,7 @@
   <api filename="../gnomevfs/gnome-vfs-api-2.16.raw">
     <library name="gnomevfs-2">
       <namespace name="GnomeVFS">
-        <directory path="gnome-vfs-2.14.1/libgnomevfs">
+        <directory path="gnome-vfs-2.15.3/libgnomevfs">
           <exclude>gnome-vfs-file-size.h</exclude>
           <exclude>gnome-vfs-method.h</exclude>
           <exclude>gnome-vfs-transform.h</exclude>
@@ -163,7 +163,7 @@
   <api filename="../gnome/gnome-api-2.16.raw">
     <library name="gnome-2">
       <namespace name="Gnome">
-        <dir>libgnome-2.14.1/libgnome</dir>
+        <dir>libgnome-2.15.1/libgnome</dir>
       </namespace>
     </library>
     <library name="gnomecanvas-2">
@@ -173,7 +173,7 @@
     </library>
     <library name="gnomeui-2">
       <namespace name="Gnome">
-        <directory path="libgnomeui-2.14.1/libgnomeui">
+        <directory path="libgnomeui-2.15.2/libgnomeui">
 	  <!-- These were ignored in gtk# 1.0 due to a parser bug, but contain only deprecated methods -->
 	  <exclude>gnome-app-util.h</exclude>
 	  <exclude>gnome-dialog.h</exclude>
@@ -222,7 +222,7 @@
     </library>
     <library name="panel-applet-2">
       <namespace name="Gnome">
-        <dir>gnome-panel-2.14.1/libpanel-applet</dir>
+        <dir>gnome-panel-2.14.2/libpanel-applet</dir>
       </namespace>
     </library>
   </api>
