@@ -1,3 +1,9 @@
+2006-07-15  Mike Kestner  <mkestner@novell.com>
+
+	* sources/gtk-sharp-2.10-sources.xml : update to gnome 2.15.4
+	sources for the 2.10 api build.
+	* sources/Makefile.am : ditto.
+
 2006-07-14  Mike Kestner  <mkestner@novell.com>
 
 	* sources/gtk-sharp-2.10-sources.xml : update to gtk+-2.10.0 
